fixed res overflow on phone

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   text-align: center;
   font-family: 'Runescape UF';
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
